--- a/App.config
+++ b/App.config
@@ -6,8 +6,7 @@
     <system.serviceModel>
         <bindings>
             <basicHttpBinding>
-                <binding name="BasicHttpsBinding_ITransportDocumentService" maxBufferPoolSize="20000000"
-                    maxReceivedMessageSize="20000000">
+                <binding name="BasicHttpsBinding_ITransportDocumentService">
                     <security mode="TransportWithMessageCredential" />
                 </binding>
                 <binding name="BasicHttpsBinding_ITransportDocumentService1">
